vpc.tf

#provisioning the VPC
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "roboshop-${var.ENV}-vpc"
  }
}
